# algorithms

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
algorithms/: binary_search.py  bubble_sort.py  select_sort.py
tests/: test_binary_search.py  test_bubble_sort.py  test_select_sort.py
