[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
